Fix layout on mobile

--- a/src/styles/AddTaskForm.css
+++ b/src/styles/AddTaskForm.css
@@ -4,7 +4,9 @@
 
 .add-task-form__date-input {
     width: 150px;
-    height: 50px;
+    min-height: 50px;
+
+    background: white;
 
     font-family: "Open Sans";
     outline: none;
